cluster/apps/default/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name jellyfin
  labels: &labels
    app.kubernetes.io/name: *name
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: *name
          image: jellyfin/jellyfin:10.7.7
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 500m
              memory: 200Mi
            limits:
              cpu: 2000m
              memory: 1Gi
              gpu.intel.com/i915: 1
          ports:
            - name: &port http
              protocol: TCP
              containerPort: 8096
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: jellyfin-media
              mountPath: /media
            - name: jellyfin-transcode
              mountPath: /config/transcodes
          livenessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 15
            successThreshold: 1
            failureThreshold: 150
          readinessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 15
            successThreshold: 1
            failureThreshold: 150
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        supplementalGroups:
          - 44
          - 109
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: jellyfin-media
          persistentVolumeClaim:
            claimName: shared-media
        - name: jellyfin-transcode
          persistentVolumeClaim:
            claimName: jellyfin-transcode
