cluster/apps/default/jellyfin/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name jellyfin
  labels:
    app.kubernetes.io/name: *name
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: dashboard-headers
      services:
        - name: *name
          port: 8096
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME_0}-prod-tls
